Nouvelle solution avec div pour les 4 images dans index.html et stylesheet.css et conservation de la solution avec tableau dans old_index.html et old_stylesheet.css

--- a/css/old_stylesheet.css
+++ b/css/old_stylesheet.css
@@ -59,22 +59,17 @@ nav {
   padding-top: 1%;
   padding-bottom: 1%;
 }
-/*table {
+table {
   width: 45%;
   position: relative;
   margin: auto;
-}*/
-#div_autumn, #div_winter, #div_spring, #div_summer {
-  display: inline-block;
-  margin: 0.3%;
 }
-img {
+table img {
   width: 16em; /* 250 px */
   height: 10em; /* 150 px */
 }
 .text_img {
   background-color: #ECECEC; /* White smoke */
-  margin-top: -0.3%;
 }
     /* page à propos */
 #about_photo {
