--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,7 @@
 /* description : 3 pages (portfolio, à propos, contact) */
 /* entête, barre de navigation et pied de page communs aux 3 pages */
 /* date : 27/11/2015 */
+/* modif : 05/01/2016 pour insérer du bootstrap dans la page portfolio */
 body {
   font-family: 'cursive', 'fantasy', arial, sans-serif;
 }
@@ -31,6 +32,28 @@ nav {
   display: inline-block;
   padding-right: 3%;
 }
+.navbar-inverse {
+  background-color: #59ABE3; /* Picton blue */
+  border-color: #59ABE3;
+  width: 100%;
+  padding: 0.06em;
+}
+.navbar {
+  border-radius: 0px;
+}
+.navbar.center .navbar-inner {
+    text-align: center;
+}
+.navbar.center .navbar-inner .nav {
+    display:inline-block;
+    float: none;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: white;
+}
+.navbar-inverse .navbar-nav > li > a:hover {
+  color: #2C3E50;
+}
 .lien {
   color: white;
   font-weight: bold;
@@ -51,30 +74,35 @@ nav {
   text-align: justify;
 }
     /* page portfolio */
-#portfolio_corps {
-  width: 90%;
+/*----------*/
+/* carousel */
+/*----------*/
+#myCarousel {
+  width: 50%;
+  height: 25%;
+  margin: auto;
+}
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 100%;
+    height: 400px;
+    /*height: 40%;*/
+    margin: auto;
+}
+#hiliteCaption {
+  font-weight: bold;
+}
+#countDiapo {
   color: gray;
   text-align: center;
-  margin: auto;
-  padding-top: 1%;
-  padding-bottom: 1%;
 }
-/*table {
-  width: 45%;
-  position: relative;
-  margin: auto;
-}*/
-#div_autumn, #div_winter, #div_spring, #div_summer {
-  display: inline-block;
-  margin: 0.3%;
+#boutonCollapse {
+  background-color: #446CB3;
+  color: white;
 }
-img {
-  width: 16em; /* 250 px */
-  height: 10em; /* 150 px */
-}
-.text_img {
-  background-color: #ECECEC; /* White smoke */
-  margin-top: -0.3%;
+#Exemple {
+  background-color: #ECECEC;
+  color: gray;
 }
     /* page à propos */
 #about_photo {
